--- a/recruitment/cloud_run_stg/cloudbuild.yaml
+++ b/recruitment/cloud_run_stg/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
  # Build the container image
- - name: 'gcr.io/cloud-builders/docker'
+ - name: 'gcr.io/cloud-builders/docker_recr'
    args: ['build','-t', 'gcr.io/nih-nci-dceg-connect-stg-5519/recruitment-qaqc-api:$COMMIT_SHA', '.']
-   dir: 'stage'
+   dir: 'recruitment/cloud_run_stg'
    timeout: 1200s
  # Push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
