--- a/recruitment/cloud_run_stg/cloudbuild.yaml
+++ b/recruitment/cloud_run_stg/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
- # Build the container image
+ ## Build the container image
  - name: 'gcr.io/cloud-builders/docker'
    args: ['build','-t', 'gcr.io/nih-nci-dceg-connect-stg-5519/recruitment-qaqc-api:$COMMIT_SHA', '.']
    dir: 'recruitment/cloud_run_stg/'
