--- a/recruitment/cloud_run_stg/Dockerfile
+++ b/recruitment/cloud_run_stg/Dockerfile
@@ -1,5 +1,5 @@
 FROM rocker/tidyverse:latest
-RUN install2.r rio plumber bigrquery rlang readxl
+RUN install2.r rio plumber bigrquery rlang
 COPY ["./qaqc.R", "./qaqc.R"]
 COPY ["./qc_rules.xlsx", "./qc_rules.xlsx"]
 ENTRYPOINT ["R", "-e","pr <- plumber::plumb('qaqr.R'); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')))"]
