--- a/stg/cloudbuild.yaml
+++ b/stg/cloudbuild.yaml
@@ -11,5 +11,7 @@ steps:
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args: ['run', 'deploy', 'generic-qaqc-api', '--image=gcr.io/nih-nci-dceg-connect-stg-5519/generic-qaqc-api:$COMMIT_SHA', '--cpu=2', '--memory=8192Mi', '--region=us-central1', '--service-account=qa-qc-stage@nih-nci-dceg-connect-stg-5519.iam.gserviceaccount.com']
+options:
+  logging: CLOUD_LOGGING_ONLY
 images:
   - 'gcr.io/nih-nci-dceg-connect-stg-5519/generic-qaqc-api:$COMMIT_SHA'
