added helper functions to Dockerfile

--- a/stg/Dockerfile
+++ b/stg/Dockerfile
@@ -3,4 +3,6 @@ RUN install2.r rio plumber bigrquery googleCloudStorageR gargle janitor rlang co
 COPY ["./qaqc.R", "./qaqc.R"]
 COPY ["./api.R",  "./api.R"]
 COPY ["./config.yml", "./config.yml"]
+COPY ["./get_merged_module_1_data.R", "./get_merged_module_1_data.R"]
+COPY ["./get_merged_biospecimen_and_recruitment_data.R", "./get_merged_biospecimen_and_recruitment_data.R"]
 ENTRYPOINT ["R", "-e", "pr <- plumber::plumb('api.R'); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')))"]
