refined push to gcs

--- a/stg/config.yml
+++ b/stg/config.yml
@@ -1,6 +1,7 @@
 default:
   tier: stg
   write_to_gcs: TRUE
+  bucket: gs://qaqc_reports
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
