--- a/stg/config.yml
+++ b/stg/config.yml
@@ -2,7 +2,7 @@ default:
   tier: stg
   write_to_gcs: TRUE
   bucket: gs://qaqc_reports
-  flag: _export2box_
+  flag: export2box
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
