changed config setup

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,12 @@
 default:
   tier: stg
+  project_id: "nih-nci-dceg-connect-stg-5519"
+  project_number: 810867956467
+  write_to_gcs: TRUE
+  box_folder: 211501237681
+  box_app: NCI_BOX_GCP_CONNECT4CANCER_DEV
+  bucket: gs://qaqc_reports
+  flag: export2box
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
