--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 .Ruserdata
 qaqc_testing.Rproj
 qc_out.xlsx
-olds/
+Documentation/
 recruitment/.DS_Store
 recruitment/cloud_run_stg/~$*
 *.DS_Store
+*qc_report
