--- a/prod/cloudbuild.yaml
+++ b/prod/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
 
   # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-args: ['build','-t', 'gcr.io/nih-nci-dceg-connect-prod-6d04/generic-qaqc-api:$COMMIT_SHA',  '-f', 'stg/', '.']
+args: ['build','-t', 'gcr.io/nih-nci-dceg-connect-prod-6d04/generic-qaqc-api:$COMMIT_SHA',  '-f', 'stg/Dockerfile', '.']
 timeout: 1200s
 #dir: 'prod'
 
