--- a/prod/config.yml
+++ b/prod/config.yml
@@ -3,7 +3,7 @@ default:
   project_id: "nih-nci-dceg-connect-prod-6d04"
   project_number: 155089172944
   write_to_gcs: TRUE
-  bucket: gs://qaqc_reports
+  bucket: gs://qaqc_reports_prod
   box_app: NCI_BOX_GCP_CONNECT4CANCER_PROD
   box_folder: 211674408263
   flag: export2box
