--- a/prod/config.yml
+++ b/prod/config.yml
@@ -6,7 +6,7 @@ default:
   bucket: gs://qaqc_reports_prod
   box_app: NCI_BOX_GCP_CONNECT4CANCER_PROD
   box_folder: "211674408263"
-  flag: export2box
+  flag: "export2box"
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
