Added rules_col_min/max to config files per report

--- a/prod/config.yml
+++ b/prod/config.yml
@@ -7,10 +7,14 @@ default:
   box_app: NCI_BOX_GCP_CONNECT4CANCER_PROD
   box_folder: "211674408263"
   flag: ""
+  rules_col_min: A
+  rules_col_max: Z
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
   flag: "export2box"
+  rules_col_min: A
+  rules_col_max: O
 recruitment:
   QC_REPORT: recruitment
   rules_file: qc_rules_recruitment.xlsx
@@ -18,3 +22,5 @@ module1:
   QC_REPORT: module1
   rules_file: qc_rules_module1.xlsx
   flag: "export2box"
+  rules_col_min: A
+  rules_col_max: T
