--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
 default:
-  tier: stg
-  project_id: "nih-nci-dceg-connect-stg-5519"
-  project_number: "810867956467"
+  tier: prod
+  project_id: "nih-nci-dceg-connect-prod-6d04"
+  project_number: "155089172944"
   write_to_gcs: TRUE
-  bucket: gs://qaqc_reports
-  box_app: NCI_BOX_GCP_CONNECT4CANCER_DEV
-  box_folder: "211501237681"
+  bucket: gs://qaqc_reports_prod
+  box_app: NCI_BOX_GCP_CONNECT4CANCER_PROD
+  box_folder: "211674408263"
   flag: ""
 biospecimen:
   QC_REPORT: biospecimen
@@ -17,4 +17,8 @@ recruitment:
 module1:
   QC_REPORT: module1
   rules_file: qc_rules_module1.xlsx
+  flag: export2box
+module2:
+  QC_REPORT: module2
+  rules_file: qc_rules_module2.xlsx
   flag: export2box
