added get_merged_module_2_data.R to Dockerfile

--- a/stg/Dockerfile
+++ b/stg/Dockerfile
@@ -4,6 +4,7 @@ COPY ["./qaqc.R", "./qaqc.R"]
 COPY ["./api.R",  "./api.R"]
 COPY ["./stg/config.yml", "./config.yml"] # copy config.yml from local stg directory to main directory in cloud run
 COPY ["./get_merged_module_1_data.R", "./get_merged_module_1_data.R"]
+COPY ["./get_merged_module_2_data.R", "./get_merged_module_2_data.R"]
 COPY ["./get_merged_biospecimen_and_recruitment_data.R", "./get_merged_biospecimen_and_recruitment_data.R"]
 COPY ["./qc_rules_recruitment.xlsx", "./qc_rules_recruitment.xlsx"]
 COPY ["./qc_rules_biospecimen.xlsx", "./qc_rules_biospecimen.xlsx"]
