changed destination folder of Biospecimen QAQC report

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ recruitment/cloud_run_stg/~$*
 *qc_report*
 *.Rproj
 ~$out.xlsx
-profile.R 
+profile.R
 out.xlsx
 .vscode*
 Rprof.out
+uninvited_participants_qc.R
+*.csv
