--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ out.xlsx
 Rprof.out
 uninvited_participants_qc.R
 *.csv
+concatenate_reports_b.py
+example_bq_download.R
+trigger_qaqc_cloud_runs.py
