specified module1 box folder in config

--- a/prod/config.yml
+++ b/prod/config.yml
@@ -19,6 +19,7 @@ module1:
   QC_REPORT: module1
   rules_file: qc_rules_module1.xlsx
   flag: "export2box"
+  box_folder: "203464977998"
 module2:
   QC_REPORT: module2
   rules_file: qc_rules_module2.xlsx
