--- a/prod/config.yml
+++ b/prod/config.yml
@@ -30,6 +30,7 @@ module3:
 module4:
   QC_REPORT: module4
   rules_file: qc_rules_module4.xlsx
+  box_folder: "226704352266"
 blood_urine_mouthwash:
   QC_REPORT: blood_urine_mouthwash
   rules_file: qc_rules_blood_urine_mouthwash.xlsx
