--- a/prod/config.yml
+++ b/prod/config.yml
@@ -8,6 +8,7 @@ default:
   box_folder: "211674408263"
   flag: "export2box"
   exclusions_file: ""
+  LOAD_FROM_BQ: TRUE
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
@@ -16,6 +17,7 @@ recruitment:
   QC_REPORT: recruitment
   rules_file: qc_rules_recruitment.xlsx
   exclusions_file: "exclusions/qc_exclusions_recruitment.csv"
+  LOAD_FROM_BQ: FALSE
 module1:
   QC_REPORT: module1
   rules_file: qc_rules_module1.xlsx
