--- a/prod/config.yml
+++ b/prod/config.yml
@@ -8,7 +8,7 @@ default:
   box_folder: "211674408263"
   flag: "export2box"
   exclusions_file: ""
-  LOAD_FROM_BQ: FALSE
+  LOAD_FROM_BQ: TRUE
 biospecimen:
   QC_REPORT: biospecimen
   rules_file: qc_rules_biospecimen.xlsx
